--- a/manifest.json
+++ b/manifest.json
@@ -1,7 +1,7 @@
 {
   "name": "Control de Medias",
-  "short_name": "MediasApp",
-  "start_url": "./index.html",
+  "short_name": "pairSocks",
+  "start_url": "/index.html",
   "display": "standalone",
   "background_color": "#1f2937",
   "theme_color": "#4caf50",
@@ -18,3 +18,4 @@
     }
   ]
 }
+
